# com.github.zeromq-libzmq

./: .build  CMakeLists.txt  Jenkinsfile  build_artifact.py
cmake/toolchainfiles/: toolchain_ubuntu_arm64.cmake
jonchki/: jonchkicfg.xml
zeromq/: CMakeLists.txt  __README__.txt
zeromq/installer/: install_linux.lua  install_windows.lua  libzmq.xml
zeromq/patches/: 001_mingw64_compatibility.diff  002_more_mingw_patches.diff  003_more_mingw_patches.diff
